--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,25 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+@article{krueger1999,
+  title={Experimental estimates of education production functions},
+  author={Krueger, Alan B},
+  journal={The quarterly journal of economics},
+  volume={114},
+  number={2},
+  pages={497--532},
+  year={1999},
+  publisher={MIT Press}
+}
+@article{pinotti,
+Author = {Pinotti, Paolo},
+Title = {Clicking on Heaven's Door: The Effect of Immigrant Legalization on Crime},
+Journal = {American Economic Review},
+Volume = {107},
+Number = {1},
+Year = {2017},
+Month = {January},
+Pages = {138-68},
+DOI = {10.1257/aer.20150355},
+URL = {http://www.aeaweb.org/articles?id=10.1257/aer.20150355}}
+
