--- a/08-STAR.Rmd
+++ b/08-STAR.Rmd
@@ -31,7 +31,7 @@ p1 = dagify(outcome ~ teacher,
 p1
 ```
 
-We will look at an important paper in this literature now, which used a randomized experiment to make some substantial progress in answering the question *what is the production function for student outcomes*. We will study Krueger (1999), which analyses the Tennessee Student/Teacher Achievement Ratio Experiment, STAR in short.
+We will look at an important paper in this literature now, which used a randomized experiment to make some substantial progress in answering the question *what is the production function for student outcomes*. We will study @krueger1999, which analyses the Tennessee Student/Teacher Achievement Ratio Experiment, STAR in short.
 
 ## The STAR Experiment
 
@@ -51,7 +51,7 @@ Now, what can STAR do for us here? There will still be selection into schools, h
 
 ## PO as Regression
 
-Before we start replicating the findings in Krueger (1999), let's augment our potential outcomes (PO) notation from the previous chapter. To remind you, we had defined the PO model in equation \@ref(eq:rubin-model):
+Before we start replicating the findings in @krueger1999, let's augment our potential outcomes (PO) notation from the previous chapter. To remind you, we had defined the PO model in equation \@ref(eq:rubin-model):
 
 \begin{equation*}
 Y_i = D_i Y_i^1 + (1-D_i)Y_i^0 
@@ -72,8 +72,8 @@ Now, as a start, let's assume that the treatment effect of *small class* is iden
 Next, let's distribute the $Y_i^0$ in \@ref(eq:rubin-model) as follows:
 
 \begin{align*}
-Y_i &= Y_i^0  D_i (Y_i^1 - Y_i^0 )\\
-    &= Y_i^0  D_i \delta  
+Y_i &= Y_i^0 + D_i (Y_i^1 - Y_i^0 )\\
+    &= Y_i^0 + D_i \delta  
 \end{align*}
 
 finally, let's add $E[Y_i^0] - E[Y_i^0]=0$ to the RHS of that last equation to get
@@ -88,9 +88,9 @@ which we can rewrite in our well-known regression format
 Y_i = b_0 + \delta D_i  + u_i  (\#eq:PO-reg)
 \end{equation}
 
-In that formulation, the random deviation $Y_i^0 - E[Y_i^0]$ is the residual $u$. Under only very specific circumstances will the OLS estimator $\hat{\delta}$ identify the true Average Treatment Effect $\delta^{ATE}$. Random assignment ensures that the crucial assumption $E[u|D] = E[Y_i^0 - E[Y_i^0]|D] = E[Y_i^0|D] - E[Y_i^0] = 0$, in other words, there is no difference in nontreatment outcomes across treatment groups. Additionally, we could easily include regressors $X_i$ in equation \@ref(eq:PO-reg) to account for additional variation in the outcome.
+In that formulation, the first $E[Y_i^0]$ is the average non-treatment outcome, which we could regard as some sort of baseline - i.e. our intercept. $\delta$ is the coefficient on the binary treatment indicator. The random deviation $Y_i^0 - E[Y_i^0]$ is the residual $u$. Under only very specific circumstances will the OLS estimator $\hat{\delta}$ identify the true Average Treatment Effect $\delta^{ATE}$. Random assignment ensures that the crucial assumption $E[u|D] = E[Y_i^0 - E[Y_i^0]|D] = E[Y_i^0|D] - E[Y_i^0] = 0$, in other words, there is no difference in nontreatment outcomes across treatment groups. Additionally, we could easily include regressors $X_i$ in equation \@ref(eq:PO-reg) to account for additional variation in the outcome.
 
-With that out of the way, let's write down the regression that Kruger (1999) wants to estimate. Equation (2) in his paper reads like this:
+With that out of the way, let's write down the regression that @krueger1999 wants to estimate. Equation (2) in his paper reads like this:
 
 \begin{equation}
 Y_{ics} = \beta_0 + \beta_1 \text{small}_{cs} + \beta_2 \text{REG/A}_{cs} + \beta_3 X_{ics} + \alpha_s + \varepsilon_{ics} (\#eq:krueger2)
@@ -98,7 +98,7 @@ Y_{ics} = \beta_0 + \beta_1 \text{small}_{cs} + \beta_2 \text{REG/A}_{cs} + \bet
 
 where $i$ indexes pupil, $c$ is class id and $s$ is the school id. $\text{small}_{cs}$ and $\text{REG/A}_{cs}$ are both dummy variables equal to one if class $c$ in school $s$ is either *small*, or *regular with aide*. $X_{ics}$ contains student specific controls (like gender). Importantly, given that randomization was at the school level, we control for the identify of the school with a school fixed effect $\alpha_s$. 
 
-Before we proceed to run this regression, we need to define the outcome variable $Y_{ics}$. Krueger (1999) combines the various SAT test scores in an average score for each student in each grade. However, given that the SAT scores are on different scales, he first computes a ranking of all scores for each subject (reading or math), and then assigns to each student their percentile in the rank distribution. The highest score is 100, the lowest score is 0.
+Before we proceed to run this regression, we need to define the outcome variable $Y_{ics}$. @krueger1999 combines the various SAT test scores in an average score for each student in each grade. However, given that the SAT scores are on different scales, he first computes a ranking of all scores for each subject (reading or math), and then assigns to each student their percentile in the rank distribution. The highest score is 100, the lowest score is 0.
 
 ## Implementing STAR
 
@@ -114,24 +114,32 @@ x
 It's a bit unfortunate to switch to data.table, but I haven't been able to do what I wanted in dplyr :-( . Ok, here goes. First thing, you can see that this data set is *wide*. First thing we want to do is to make it *long*, i.e. reshape it so that if has 4 ID columns, and several measurements columns thereafter. First, let's add a studend ID:
 
 ```{r}
-x[, ID := 1:nrow(x)]
-mx = melt.data.table(x, id = c("ID","gender","ethnicity","birth"), measure.vars = patterns("star*","read*","math*", "schoolid*", "degree*","experience*","tethnicity*","lunch*"), variable.name = "grade", value.name = c("classtype","read","math","schoolid","degree","experience","tethniticy","lunch"))
+x[, ID := 1:nrow(x)]  # add student ID
+
+# `melt` a data.table means to dissolve it and reassamble for some ID variables
+mx = melt.data.table(x, 
+                     id = c("ID","gender","ethnicity","birth"), 
+                     measure.vars = patterns("star*","read*","math*", "schoolid*",
+                                             "degree*","experience*","tethnicity*","lunch*"), 
+                     value.name = c("classtype","read","math","schoolid","degree",
+                                    "experience","tethniticy","lunch"),
+                     variable.name = "grade")
+
 levels(mx$grade) <- c("stark","star1","star2","star3")  # reassign levels to grade factor
-mx
+mx[,1:8]  # show first 8 cols
 ```
 
 You can see here that for example pupil `ID=1` was not present in kindergarden, but joined later. We will only keep complete records, hence we drop those NAs:
 
 ```{r}
 mx = mx[complete.cases(mx)]
-mx[ID==2]  # here is pupile number 2
+mx[ID==2]  # here is pupil number 2
 ```
 
 Ok, now on to standardizing those `read` and `math` scores. you can see they are on their kind of arbitrary SAT scales
 
 ```{r}
 mx[,range(read)]
-mx[,range(math)]
 ```
 
 First thing to do is to create an empirical cdf of each of those scores within a certain grade. That is the *ranking* of scores from 0 to 1:
@@ -154,7 +162,7 @@ par(mfcol=c(1,1),mar = om)
 
 You can see here how the cdf maps SAT scores (650, for example), into the interval $[0,1]$. Now, in the `ecdfs` `data.table` object, the `readcdf` column contains a *function* (a cdf) for each grade. We can evaluate the observed test scores for each student in that function to get their ranking in $[0,1]$, by grade:
 
-```{r gradedens, fig.cap = "Reproducing Figure I in Krueger (1999)",fig.align="center"}
+```{r gradedens, fig.cap = "Reproducing Figure I in @krueger1999",fig.align="center"}
 setkey(ecdfs, grade)  # key ecdfs according to `grade`
 setkey(mx,grade)
 
@@ -172,9 +180,9 @@ mxz = merge(mx,z,by = c("grade","ID"))
 ggplot(data = mxz, mapping = aes(x = score,color=classtype)) + geom_density() + facet_wrap(~grade) + theme_bw()
 ```
 
-You can compare figure \@ref(fig:gradedens) to Krueger (1999) figure 1: 
+You can compare figure \@ref(fig:gradedens) to @krueger1999 figure 1. You can see that the density estimates are almost identical, the discrepancy comes mainly from the fact that we split the regular classes also by with/without aide.
 
-```{r,echo=FALSE}
+```{r kruegerdens,echo=FALSE, fig.cap = "Outcome densities, @krueger1999 figure 1."}
 knitr::include_graphics("images/krueger1.png")
 ```
 
@@ -207,7 +215,7 @@ school_co = c(unique(school_co,grep(names(coef(m3[1,]$model[[1]])),pattern = "sc
 
 Now let's look at each grade's models. 
 
-```{r,results="asis"}
+```{r}
 h = list()
 for (g in unique(mxz$grade)) {
     h[[g]] <- huxtable::huxreg(subset(m1,grade == g)$model[[1]],
@@ -228,4 +236,14 @@ h$star2
 h$star3
 ```
 
-You should compare those to table 5 in Krueger (1999), where it says *OLS: actual class size*. For the most part, we come quite close to his esimates! We did not follow his more sophisticated error structure (by allowing errors to be correlated at the classroom level), and we seem to have different number of individuals in each year.
+You should compare those to table 5 in @krueger1999, where it says *OLS: actual class size*. For the most part, we come quite close to his esimates! We did not follow his more sophisticated error structure (by allowing errors to be correlated at the classroom level), and we seem to have different number of individuals in each year. Here is his table 5:
+
+```{r krug-table,echo=FALSE,fig.show = "hold", fig.align = "default"}
+knitr::include_graphics("images/krueger2.png",dpi = 300) 
+knitr::include_graphics("images/krueger3.png",dpi = 300)
+knitr::include_graphics("images/krueger4.png",dpi = 300) 
+knitr::include_graphics("images/krueger5.png",dpi = 300)
+```
+
+So, based on those results we can say that attending a small class raises student's test scores by about 5 percentage points. Unfortunately, says @krueger1999, is it hard to gauge whether those are big or small effects: how important is it to score 5% more or less? Well, you might say, it depends how close you are to an important cutoff value (maybe entrance to the next school level requires a score of `x`, and the 5% boost would have made that school feasible). Be that as it may, now you know more about one of the most influential papers in education economics, and why using an experimental setup allowed it to achieve credible causal estimates.
+
