Update the book

--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -128,7 +128,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-11-25}
+    \date{2019-11-26}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -173,10 +173,8 @@
 
 Welcome to Introductory Econometrics for 2nd year undergraduates at
 ScPo! On this page we outline the course and present the Syllabus.
-2018/2019 is the first time this course will be taught, so we are still
-in a \emph{beta} release stage - you should expect a couple of loose
-ends here and there, but we think the overall experience is going to be
-pleasant!
+2018/2019 was the first time that we taught this course in this format,
+so we are in year 2 now.
 
 \subsection*{Objective}\label{objective}
 \addcontentsline{toc}{subsection}{Objective}
@@ -187,14 +185,12 @@ start at a level that assumes no prior knowledge about statistics
 whatsoever. Our objective is to have you understand and be able to
 interpret linear regression analysis. We will not rely on maths and
 statistics, but practical learning in order to teach the main concepts.
+We also add the principal elements of causal inference, such that you
+will start being able to distinguish between simple statistical
+correlation and actual causation.
 
 \subsection*{Syllabus and Requirements}\label{syllabus-and-requirements}
 \addcontentsline{toc}{subsection}{Syllabus and Requirements}
-
-You can find the topics we want to go over in the left panel of this
-page. The later chapters are optional and depend on the speed with which
-we will proceed eventually. Chapters 1-4 are the core material of the
-course.
 
 The only requirement is that \textbf{you bring your own personal
 computer} to each session. We will be using the free statistical
@@ -215,6 +211,13 @@ meetings is to clarify any questions, and to work together through
 tutorials. The little theory we need will be covered in this book, and
 \textbf{you are expected to read through this in your own time} before
 coming to class.
+
+\subsection*{Slides}\label{slides}
+\addcontentsline{toc}{subsection}{Slides}
+
+There are slides for most book chapters at a
+\href{https://github.com/ScPoEcon/ScPoEconometrics-Slides}{dedicated
+website}.
 
 \subsection*{This Book and Other
 Material}\label{this-book-and-other-material}
@@ -244,14 +247,14 @@ observing the terms of the license on the
 \subsection*{Assessments}\label{assessments}
 \addcontentsline{toc}{subsection}{Assessments}
 
-We will assess participation in class and conduct a final exam.
+We will assess participation in class, quizzes on moodle and take home
+exams.
 
 \subsection*{Communication}\label{communication}
 \addcontentsline{toc}{subsection}{Communication}
 
-We will communicate exclusively on our
-\href{https://scpomtrics.slack.com}{\texttt{slack}} group. You will get
-an invitation email to join from your instructor in due course.
+We will communicate exclusively on our slack group. You will get an
+invitation email to join from your instructor in due course.
 
 \chapter{\texorpdfstring{Introduction to
 \texttt{R}}{Introduction to R}}\label{R-intro}
@@ -4896,8 +4899,8 @@ instead of \(y = wage\) as outcome variable on our regression
 coefficients \(b_0\) and \(b_1\)? Well, let's try!
 
 \% Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard
-University. E-mail: hlavac at fas.harvard.edu \% Date and time: Mon, Nov
-25, 2019 - 10:11:16 PM
+University. E-mail: hlavac at fas.harvard.edu \% Date and time: Tue, Nov
+26, 2019 - 03:45:33 PM
 
 \begin{table}[!htbp] \centering 
   \caption{Effect of Scaling on Coefficients} 
@@ -5053,8 +5056,8 @@ above because it is a \emph{nonlinear} function. Let's compare the
 output between both models:
 
 \% Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard
-University. E-mail: hlavac at fas.harvard.edu \% Date and time: Mon, Nov
-25, 2019 - 10:11:17 PM
+University. E-mail: hlavac at fas.harvard.edu \% Date and time: Tue, Nov
+26, 2019 - 03:45:33 PM
 
 \begin{table}[!htbp] \centering 
   \caption{Log Transformed Equation} 
@@ -5416,8 +5419,8 @@ this into a regression model now:
 \end{Shaded}
 
 \% Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard
-University. E-mail: hlavac at fas.harvard.edu \% Date and time: Mon, Nov
-25, 2019 - 10:11:20 PM
+University. E-mail: hlavac at fas.harvard.edu \% Date and time: Tue, Nov
+26, 2019 - 03:45:37 PM
 
 \begin{table}[!htbp] \centering 
   \caption{} 
@@ -5878,8 +5881,8 @@ on their education as well as their sex:
 \end{Shaded}
 
 \% Table created by stargazer v.5.2.2 by Marek Hlavac, Harvard
-University. E-mail: hlavac at fas.harvard.edu \% Date and time: Mon, Nov
-25, 2019 - 10:11:21 PM
+University. E-mail: hlavac at fas.harvard.edu \% Date and time: Tue, Nov
+26, 2019 - 03:45:38 PM
 
 \begin{table}[!htbp] \centering 
   \caption{} 
